Stress report fragment update

--- a/app/src/main/res/layout/fragment_stress_report1.xml
+++ b/app/src/main/res/layout/fragment_stress_report1.xml
@@ -52,6 +52,7 @@
                     android:includeFontPadding="false"
                     android:textColor="@color/textColor_blue"
                     android:background="#00000000"
+                    android:clickable="false"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
 
