commit from hwarang

--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -95,18 +95,19 @@
             android:includeFontPadding="false"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/frg_me_step2_time1"/>
+            app:layout_constraintRight_toRightOf="parent"/>
+
         <TextView
             android:id="@+id/frg_me_step2_time1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/my_text_size14"
             android:fontFamily="@font/notosanscjkkrlight"
             android:includeFontPadding="false"
             android:text="time"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/frg_me_step2_date1"
-            app:layout_constraintRight_toRightOf="parent"/>
+            android:textSize="@dimen/my_text_size14"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/frg_me_step2_date1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
@@ -135,123 +136,213 @@
         android:textColor="@color/textColor_default"
         android:text="@string/string_stress_why"/>
 
-    <LinearLayout
+    <ScrollView
         android:layout_marginHorizontal="14dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/stress_reason_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="230dp"
+        android:fillViewport="true"
         app:layout_constraintTop_toBottomOf="@id/txt_reason"
         app:layout_constraintBottom_toTopOf="@id/txt_wait_next_report"
         android:background="@color/color_low_bg">
 
         <LinearLayout
-            android:paddingVertical="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_bottom_border">
+            android:orientation="vertical">
 
-            <ImageView
-                android:layout_marginHorizontal="6dp"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:id="@+id/me_listview_phone_container"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_f_phoneusage"
-                android:layout_gravity="center"/>
-            <TextView
-                android:layout_width="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:paddingVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:background="@drawable/view_bottom_border">
+
+                    <ImageView
+                        android:layout_marginHorizontal="6dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_f_phoneusage"
+                        android:layout_gravity="center" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="휴대폰 사용"
+                        android:textSize="@dimen/my_text_size16"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_gravity="center"/>
+
+                </LinearLayout>
+
+                <ListView
+                    android:id="@+id/me_listview_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/me_listview_activity_container"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="휴대폰 사용"
-                android:textSize="@dimen/my_text_size16"
-                android:fontFamily="@font/notosanscjkkrregular"
-                android:includeFontPadding="false"
-                android:layout_gravity="center"/>
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/view_bottom_border">
+
+                    <ImageView
+                        android:layout_marginHorizontal="6dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_f_activity"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:paddingVertical="3dp"
+                        android:textSize="@dimen/my_text_size16"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="신체 활동"/>
+
+                </LinearLayout>
+
+
+                <ListView
+                    android:id="@+id/me_listview_activity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/me_listview_location_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/view_bottom_border">
+
+                    <ImageView
+                        android:layout_marginHorizontal="6dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_f_location"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:paddingVertical="3dp"
+                        android:textSize="@dimen/my_text_size16"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="활동 반경"/>
+
+                </LinearLayout>
+
+
+                <ListView
+                    android:id="@+id/me_listview_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/me_listview_social_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/view_bottom_border">
+
+                    <ImageView
+                        android:layout_marginHorizontal="6dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_f_social"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:paddingVertical="3dp"
+                        android:textSize="@dimen/my_text_size16"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="소셜"/>
+
+                </LinearLayout>
+
+
+                <ListView
+                    android:id="@+id/me_listview_social"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/me_listview_sleep_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/view_bottom_border">
+
+                    <ImageView
+                        android:layout_marginHorizontal="6dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_f_sleep"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:paddingVertical="3dp"
+                        android:textSize="@dimen/my_text_size16"
+                        android:fontFamily="@font/notosanscjkkrregular"
+                        android:includeFontPadding="false"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="수면"/>
+
+                </LinearLayout>
+
+
+                <ListView
+                    android:id="@+id/me_listview_sleep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <TextView
-            android:paddingVertical="4dp"
-            android:id="@+id/txt_phone_reason1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="@dimen/my_text_size14"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:text="phone_reason1"
-            android:background="@drawable/view_bottom_border"/>
 
-        <TextView
-            android:paddingVertical="4dp"
-            android:id="@+id/txt_phone_reason2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="@dimen/my_text_size14"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:text="phone_reason1"
-            android:background="@drawable/view_bottom_border"/>
 
-        <TextView
-            android:paddingVertical="4dp"
-            android:id="@+id/txt_phone_reason3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="@dimen/my_text_size14"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:text="phone_reason1"
-            android:background="@drawable/view_bottom_border"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/view_bottom_border">
-
-            <ImageView
-                android:layout_marginHorizontal="6dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_f_location"
-                android:layout_gravity="center"/>
-            <TextView
-                android:paddingVertical="3dp"
-                android:textSize="@dimen/my_text_size16"
-                android:fontFamily="@font/notosanscjkkrregular"
-                android:includeFontPadding="false"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="활동반경"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:paddingVertical="4dp"
-            android:id="@+id/txt_location_reason1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="@dimen/my_text_size14"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:text="location_reason2"
-            android:background="@drawable/view_bottom_border"/>
-
-        <TextView
-            android:paddingVertical="4dp"
-            android:id="@+id/txt_location_reason2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="@dimen/my_text_size14"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:text="location_reason2"/>
-
-    </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/txt_wait_next_report"
