--- a/app/src/main/res/drawable/btn_design_selected.xml
+++ b/app/src/main/res/drawable/btn_design_selected.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="30dp"></corners>
-            <solid android:color="@color/border_btn_gray"></solid>
-            <stroke android:width="1dp" android:color="@color/color_white"/>
+            <corners android:radius="30dp"/>
+            <solid android:color="@color/color_white"/>
+            <stroke android:width="1dp" android:color="@color/item_color_active"/>
         </shape>
     </item>
 </selector>
