add fullscreen dialog for starting step1 add when test ema do not save add standby screen from 3 am to 11 am Change from step1 to step2 after a period of time

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,9 @@
         <item name="android:includeFontPadding">false</item>
     </style>
 
+    <style name="full_screen_dialog">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
+
 </resources>
