--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -89,7 +89,25 @@
         android:includeFontPadding="false"
         android:textSize="@dimen/my_text_size16"/>
 
+    <TextView
+        android:id="@+id/frg_me_before_11hours"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/string_frg_me_before_11hours"
+        android:textAlignment="center"
+        android:fontFamily="@font/notosanscjkkrregular"
+        android:includeFontPadding="false"
+        android:textSize="@dimen/my_text_size16"
+        android:textColor="@color/textColor_default"
+        android:visibility="invisible"
+        />
+
     <RelativeLayout
+        android:id="@+id/time_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
