--- a/app/src/main/res/layout/activity_tag.xml
+++ b/app/src/main/res/layout/activity_tag.xml
@@ -35,7 +35,7 @@
             android:includeFontPadding="false"
             android:textColor="@color/textColor_blue"
             android:background="#00000000"
-            android:text="저장"/>
+            android:text="완료"/>
 
     </androidx.appcompat.widget.Toolbar>
 
