--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -75,14 +75,14 @@
 
         <ImageView
             android:id="@+id/frg_me_step2_before_11hours_img"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ic_help"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_question"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@id/frg_me_step2_before_txt1"
             android:layout_marginBottom="13dp"
-            android:tint="#c7c7c7"/>
+            />
 
         <TextView
             android:id="@+id/frg_me_step2_before_txt1"
@@ -121,6 +121,7 @@
         android:id="@+id/frg_me_step2_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="visible"
         android:paddingTop="?attr/actionBarSize">
 
         <ImageView
