--- a/app/src/main/res/layout/fragment_care_child2.xml
+++ b/app/src/main/res/layout/fragment_care_child2.xml
@@ -104,6 +104,7 @@
         app:layout_constraintTop_toBottomOf="@id/child2_txt3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
         android:background="@drawable/view_top_border">
 
         <TextView
@@ -122,7 +123,7 @@
         <TextView
             android:id="@+id/child2_recommend1"
             android:layout_marginTop="3dp"
-            android:layout_marginLeft="35dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosanscjkkrlight"
@@ -135,7 +136,7 @@
         <TextView
             android:id="@+id/child2_recommend2"
             android:layout_marginTop="3dp"
-            android:layout_marginLeft="35dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosanscjkkrlight"
@@ -148,7 +149,7 @@
         <TextView
             android:id="@+id/child2_recommend3"
             android:layout_marginTop="3dp"
-            android:layout_marginLeft="35dp"
+            android:layout_marginHorizontal="35dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosanscjkkrlight"
