CareChildFragment3 : Now the daily comment is uploaded to the server at every modification, leaving a log.

--- a/app/src/main/res/layout/fragment_care_child2.xml
+++ b/app/src/main/res/layout/fragment_care_child2.xml
@@ -97,7 +97,7 @@
         android:textColor="@color/textColor_light"
         android:textSize="@dimen/my_text_size14"
         android:text="test"
-        android:visibility="visible"/>
+        android:visibility="invisible" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/child2_recommend_container"
