1) CareChildFragment1 bug fix 2) add muteToday switch listener for zaturi 3) update MeFragmentStep1 for ema check 4) UI update MeFragmentStep2 from gRPC

--- a/app/src/main/res/drawable/btn_time_complete.xml
+++ b/app/src/main/res/drawable/btn_time_complete.xml
@@ -2,8 +2,8 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="7dp"></corners>
-            <solid android:color="@color/color_fsv_title"></solid>
-            <stroke android:width="2dp" android:color="@color/color_fsv_title"/>
+            <solid android:color="#659ddd"></solid>
+            <stroke android:width="2dp" android:color="#659ddd"/>
         </shape>
     </item>
 </selector>
