--- a/app/src/main/res/layout/fragment_report_step2.xml
+++ b/app/src/main/res/layout/fragment_report_step2.xml
@@ -39,6 +39,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
+                android:clickable="true"
+                android:focusable="true"
                 android:src="@drawable/ic_help"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -516,13 +518,13 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:visibility="gone"
                 android:id="@+id/intervention_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/view_bottom_border"
                 android:paddingHorizontal="37dp"
                 android:paddingVertical="13dp"
+                android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/report_result4">
 
                 <TextView
@@ -570,7 +572,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView android:id="@+id/selected_day_comment"
+                <TextView
+                    android:id="@+id/selected_day_comment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="15dp"
