--- a/app/src/main/res/layout/fragment_report_step2.xml
+++ b/app/src/main/res/layout/fragment_report_step2.xml
@@ -51,8 +51,10 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
+        android:id="@+id/frg_report_step2_container1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="visible"
         android:paddingTop="?actionBarSize">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -593,5 +595,301 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/frg_report_step2_container2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:paddingTop="?attr/actionBarSize">
+
+        <ImageButton
+            android:id="@+id/frg_report_step2_back_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_margin="20dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:background="#00000000"
+            android:tint="@color/textColor_default_light"/>
+
+        <ImageView
+            android:layout_marginTop="60dp"
+            android:id="@+id/frg_report_step2_hidden_img1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/icon_low"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/frg_report_step2_date_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginHorizontal="45dp"
+            app:layout_constraintTop_toBottomOf="@id/frg_report_step2_hidden_img1">
+
+            <TextView
+                android:id="@+id/frg_report_step2_date1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="date"
+                android:textSize="@dimen/my_text_size14"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+            <TextView
+                android:id="@+id/frg_report_step2_time1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                android:text="time"
+                android:textSize="@dimen/my_text_size14"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frg_report_step2_date1" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/frg_report_step2_txt_stress_level"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/frg_report_step2_date_container"
+            android:textAlignment="center"
+            android:textSize="@dimen/my_text_size14"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:includeFontPadding="false"
+            android:textColor="@color/textColor_default"
+            android:text="stress level text"/>
+
+        <TextView
+            android:id="@+id/frg_report_step2_txt_reason"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/frg_report_step2_txt_stress_level"
+            app:layout_constraintBottom_toTopOf="@id/frg_report_step2_stress_reason_container"
+            android:textAlignment="center"
+            android:layout_marginTop="24dp"
+            android:textSize="@dimen/my_text_size16"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:includeFontPadding="false"
+            android:textColor="@color/textColor_default"
+            android:text="@string/string_stress_why"/>
+
+        <ScrollView
+            android:layout_marginHorizontal="14dp"
+            android:orientation="vertical"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/frg_report_step2_stress_reason_container"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:fillViewport="true"
+            app:layout_constraintTop_toBottomOf="@id/frg_report_step2_txt_reason"
+            android:background="@color/color_low_bg">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:id="@+id/frg_report_step2_listview_phone_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:paddingVertical="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="@drawable/view_bottom_border">
+
+                        <ImageView
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_f_phoneusage"
+                            android:layout_gravity="center" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="휴대폰 사용"
+                            android:textSize="@dimen/my_text_size16"
+                            android:fontFamily="@font/notosanscjkkrregular"
+                            android:includeFontPadding="false"
+                            android:layout_gravity="center"/>
+
+                    </LinearLayout>
+
+                    <ListView
+                        android:id="@+id/frg_report_step2_listview_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/frg_report_step2_listview_activity_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/view_bottom_border">
+
+                        <ImageView
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_f_activity"
+                            android:layout_gravity="center"/>
+                        <TextView
+                            android:paddingVertical="3dp"
+                            android:textSize="@dimen/my_text_size16"
+                            android:fontFamily="@font/notosanscjkkrregular"
+                            android:includeFontPadding="false"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="신체 활동"/>
+
+                    </LinearLayout>
+
+
+                    <ListView
+                        android:id="@+id/frg_report_step2_listview_activity"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/frg_report_step2_listview_location_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/view_bottom_border">
+
+                        <ImageView
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_f_location"
+                            android:layout_gravity="center"/>
+                        <TextView
+                            android:paddingVertical="3dp"
+                            android:textSize="@dimen/my_text_size16"
+                            android:fontFamily="@font/notosanscjkkrregular"
+                            android:includeFontPadding="false"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="활동 반경"/>
+
+                    </LinearLayout>
+
+
+                    <ListView
+                        android:id="@+id/frg_report_step2_listview_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/frg_report_step2_listview_social_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/view_bottom_border">
+
+                        <ImageView
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_f_social"
+                            android:layout_gravity="center"/>
+                        <TextView
+                            android:paddingVertical="3dp"
+                            android:textSize="@dimen/my_text_size16"
+                            android:fontFamily="@font/notosanscjkkrregular"
+                            android:includeFontPadding="false"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="소셜"/>
+
+                    </LinearLayout>
+
+
+                    <ListView
+                        android:id="@+id/frg_report_step2_listview_social"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/frg_report_step2_listview_sleep_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/view_bottom_border">
+
+                        <ImageView
+                            android:layout_marginHorizontal="6dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_f_sleep"
+                            android:layout_gravity="center"/>
+                        <TextView
+                            android:paddingVertical="3dp"
+                            android:textSize="@dimen/my_text_size16"
+                            android:fontFamily="@font/notosanscjkkrregular"
+                            android:includeFontPadding="false"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="수면"/>
+
+                    </LinearLayout>
+
+
+                    <ListView
+                        android:id="@+id/frg_report_step2_listview_sleep"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
