--- a/app/src/main/res/layout/fragment_care_child2.xml
+++ b/app/src/main/res/layout/fragment_care_child2.xml
@@ -84,24 +84,32 @@
         android:background="@drawable/btn_design_blue"
         android:text="스트레스 해소방안 만들기"/>
 
-    <TextView
-        android:id="@+id/child2_txt3"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="18dp"
+    <ScrollView
+        android:id="@+id/child2_txt3_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/child2_make_btn"
-        android:fontFamily="@font/notosanscjkkrlight"
-        android:includeFontPadding="false"
-        android:textColor="@color/textColor_light"
-        android:textSize="@dimen/my_text_size14"
-        android:text="test"
-        android:visibility="invisible" />
+        android:layout_height="80dp"
+        android:paddingTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/child2_make_btn">
+
+        <TextView
+            android:id="@+id/child2_txt3"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="18dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:fontFamily="@font/notosanscjkkrlight"
+            android:includeFontPadding="false"
+            android:textColor="@color/textColor_light"
+            android:textSize="@dimen/my_text_size14"
+            android:text="test"
+            android:visibility="visible" />
+    </ScrollView>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/child2_recommend_container"
-        app:layout_constraintTop_toBottomOf="@id/child2_txt3"
+        app:layout_constraintTop_toBottomOf="@id/child2_txt3_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
